--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container">
+        <div class="container margin-top-300px">
             <div class="content-wrapper clearfix well">
                 <h2>To Do List</h2>
                 <div class="col-md-4">
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="panel-body todo-panel">
-                            <ul id="container-inwork" class="sortble">
+                            <ul id="container-inprogress" class="sortble">
                                 <li class="box-item">
                                     <div class="todo-text">
                                        Task Description
